# sparse-cubes

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  test-package.yml
benchmarks/: bench_smooth.py  bench_teasar_backends.py  bench_voxelize.py  bench_wavefront.py
sparsecubes/: __init__.py  _keys.py  _sparse.py  binary.py  core.py  downsample.py  filters.py  graph.py  measure.py  skeleton.py  teasar.py  thinning.py  voxelization.py  wavefront.py
tests/: 10075_coarse.npy  _shapes.py  _voxel_oracle.py  conftest.py  test_binary.py  test_downsample.py  test_fill.py  test_filters.py  test_graph.py  test_measure.py  test_meshing.py  test_skeleton.py  test_sparse_interop.py  test_teasar.py  test_thinning.py  test_voxelize.py  test_wavefront.py
