[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-cubes"
dynamic = ["version"]
description = "Fast, memory-efficient operations on sparse (N, 3) voxel data: meshing, voxelization, morphology, thinning and skeletonization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GNU GPL V3" }
authors = [{ name = "Philipp Schlegel", email = "pms70@cam.ac.uk" }]
keywords = [
    "voxel",
    "sparse matrix",
    "meshing",
    "surface nets",
    "culled cube faces",
    "voxelization",
    "skeletonization",
    "thinning",
    "medial axis",
    "centerline",
    "teasar",
    "morphology",
    "connected components",
    "downsampling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "trimesh",
]

[project.optional-dependencies]
# dijkstra3d-sparse: optional but *highly recommended*. teasar_skeletonize
# transparently uses it to run Dijkstra straight over the voxel coordinates,
# which is markedly faster than the pure-scipy csgraph fallback. sparse-cubes
# works without it (falls back to scipy), but installing it is strongly advised.
# >=0.1.1 for `connected_components(group=)` and `label_adjacency`, which let
# wavefront_skeletonize skip building an explicit edge list (~3x less memory).
# 0.1.0 still works everywhere; it just takes the scipy path in wavefront.
recommended = ["dijkstra3d-sparse>=0.1.1"]
# scipy: per-node radii (cKDTree) and faster graph routines. Also pulls in the
# recommended dijkstra3d-sparse accelerator so skeletonization is fast out of the box.
skeleton = ["scipy", "dijkstra3d-sparse>=0.1.1"]
# networkx: Skeleton.to_networkx()
graph = ["networkx"]
# everything, including the recommended accelerator
all = ["scipy", "networkx", "dijkstra3d-sparse>=0.1.1"]
# everything needed to run the test suite (incl. skimage cross-checks and the
# dijkstra3d-sparse accelerator so its code path is exercised)
test = ["pytest", "scipy", "scikit-image", "networkx", "dijkstra3d-sparse>=0.1.1"]
dev = ["pytest", "scipy", "scikit-image", "networkx", "dijkstra3d-sparse>=0.1.1"]

[project.urls]
Homepage = "https://github.com/navis-org/sparse-cubes"
Repository = "https://github.com/navis-org/sparse-cubes"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["sparsecubes*"]

[tool.setuptools.dynamic]
version = { attr = "sparsecubes.__version__.__version__" }
