[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-cubes"
dynamic = ["version"]
description = "Fast, memory-efficient operations on sparse (N, 3) voxel data: meshing, voxelization, morphology, thinning and skeletonization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GNU GPL V3" }
authors = [{ name = "Philipp Schlegel", email = "pms70@cam.ac.uk" }]
keywords = [
    "voxel",
    "sparse matrix",
    "meshing",
    "surface nets",
    "culled cube faces",
    "voxelization",
    "skeletonization",
    "thinning",
    "medial axis",
    "centerline",
    "teasar",
    "morphology",
    "connected components",
    "downsampling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "trimesh",
    # dijkstra3d-sparse is required. `mesh` runs its whole surface pass on it
    # (`exposed_faces` + `factorize`), and teasar/wavefront skeletonization run
    # Dijkstra and the graph operations straight over the voxel coordinates on it.
    # >=0.2.2 for `exposed_faces` and `factorize` (used unconditionally by `mesh`).
    "dijkstra3d-sparse>=0.2.2",
]

[project.optional-dependencies]
# scipy: per-node radii (cKDTree) and the csgraph routines for skeletonization.
skeleton = ["scipy"]
# networkx: Skeleton.to_networkx()
graph = ["networkx"]
all = ["scipy", "networkx"]
# everything needed to run the test suite (incl. skimage cross-checks)
test = ["pytest", "scipy", "scikit-image", "networkx"]
dev = ["pytest", "scipy", "scikit-image", "networkx"]

[project.urls]
Homepage = "https://github.com/navis-org/sparse-cubes"
Repository = "https://github.com/navis-org/sparse-cubes"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["sparsecubes*"]

[tool.setuptools.dynamic]
version = { attr = "sparsecubes.__version__.__version__" }
